# INCITE_SERVER

./: .dockerignore  .gitignore  local.yml  production.yml  pyproject.toml
compose/local/django/: dockerfile  dockerfile.safe.bkp  start
compose/local/nginx/: nginx.conf
compose/production/django/: dockerfile  entrypoint  start
compose/production/nginx/: dockerfile  nginx.conf
compose/production/postgres/: dockerfile
core/: cook_agricultura.py  cook_incite.py  cook_tests.py  cook_wrong_cities.py  custom_initial_load.py  manage.py  populate_agriculture_data.py
core/apps/agricultura/: apps.py  helpers.py  models.py  services.py  views.py
core/apps/cache/: apps.py  views.py
core/apps/common/: models.py
core/apps/incite/: apps.py  models.py  permissions.py  serializers.py  views.py
core/apps/incite/migrations/: 0001_initial.py  (+7 more)
core/apps/users/: apps.py  managers.py  models.py  permissions.py  serializers.py  signals.py  views.py
core/config/: urls.py
core/config/settings/: base.py  local.py  production.py
frontend/: index.html
frontend/assets/: BahiaCidades4-BL7XSpt6.js  BahiaRegiao2-BAhF5orp.js  BlogPage-BL9Eyg8k.js  BlogPage-BcI3z6OF.js  BlogPage-CUag9QRQ.js  Index-BUHgfg7i.js  Index-CDwc_9cC.js  Index-CEJMIt0Q.js  Index-CeLDlnhl.js  Index-DxGIccht.js  Index-LBUha9nf.js  Login-BJl-mgJJ.js  Login-CtITp9N5.js  Login-DMFIlGmq.js  PostDetailPage-B4d5N-N_.js  PostDetailPage-BG62u0Y5.js  PostDetailPage-tzKVWZHy.js  Profile-2YJQbUjO.js  Profile-Bbhgxhj5.js  Profile-DvBwhOyJ.js  Settings-DKm6KrhR.js  Settings-DcuYtLJX.js  Settings-DygG5n3N.js  arrow-left-BCmGOU5L.js  arrow-left-CKCpjuU0.js  arrow-left-DFqsXxXX.js  aspect-ratio-CDnyWZx7.js  aspect-ratio-COxU1xne.js  aspect-ratio-DiKLt4Ua.js  aux_MapPositioning-BwM6L5xc.js  aux_MapPositioning-DteKygRY.js  aux_MapPositioning-YyHMyIWY.js  button-BGXHEpHS.js  button-DvBvv6ln.js  button-S0inrZr8.js  card-A99miB_4.js  card-BorUYXEJ.js  card-COItrLsa.js  handleAxiosError-B2sV1UVq.js  handleAxiosError-CLp2L068.js  (+27 more)
(+4 files in other folders)
