
[tool.poetry]
name = "Incite_AF"
version = "0.3.0"
description = "Incite"
authors = ["hm <henry_melen@hotmail.com>"]
readme = "README.md"
packages = [{include = "core"}]


[tool.poetry.dependencies]
python = ">=3.12,<4"
django = ">=5.1.6,<6.0.0"
djangorestframework = ">=3.15.2,<4.0.0"
django-environ = ">=0.12.0,<0.13.0"
psycopg2-binary = ">=2.9.9"
djangorestframework-simplejwt = ">=5.2.2,<6.0.0"
django-cors-headers = ">=4.7.0,<5.0.0"
django-allauth = "==0.61.1"
pillow = ">=11.1.0,<12.0.0"
pytz = ">=2025.2,<2026.0"
unidecode = ">=1.4.0,<2.0.0"
dj-rest-auth = "6.0.0"
gunicorn = "^22.0.0" 
pandas="2.2.3"
openpyxl="3.1.5"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
